--- a/HikariNekoparaPatcher/HikariNekoparaPatcher.csproj
+++ b/HikariNekoparaPatcher/HikariNekoparaPatcher.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\BusyIndicator.cs" />
     <Compile Include="Converters\BoolToCollapsedVisibilityConverter.cs" />
     <Compile Include="Services\InstallPathService.cs" />
     <Compile Include="Services\PatchService.cs" />
@@ -82,6 +83,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Styles\BusyIndicator.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Styles\BlurredText.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -129,6 +134,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Resource Include="Resources\RockoFLF.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -172,6 +178,9 @@
       <Project>{4d48f287-9ab9-4edb-8553-ac2ea684787c}</Project>
       <Name>XP3Tools</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\busy.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Fody.1.28.3\build\Fody.targets" Condition="Exists('packages\Fody.1.28.3\build\Fody.targets')" />
